feat(sinon): Adds custom responses, removes custom command data.